--- a/src/umr/static/scripts/newStyling/reader-list.css
+++ b/src/umr/static/scripts/newStyling/reader-list.css
@@ -5,7 +5,7 @@ body {
 }
 
 /***********The article list style************/
-#articleLinkList {
+.articleLinkList {
   list-style-type: none;
   list-style-position: inside;
   padding: 0;
@@ -18,7 +18,7 @@ body {
   flex-direction: column;
 }
 
-#articleLinkList a {
+.articleLinkList a {
   text-decoration: none;
   font-family: Montserrat;
   color: black;
