--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -1,43 +1,356 @@
-<!-- Template for a starred article link. -->
-<script id="starred-articleLink-template" type="text/template">
-  <li class="articleLinkEntry" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
+<!DOCTYPE html>
+<html>
+  <!--This is a test-push for the Kristin Reader-->
 
-      <div class="articleLinkHeader">
+  <head>
+    <title>Zeeguu Bookmarks</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-          <a class="fadeoutOnClick articleLinkTitle headerElement"
-             href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}">
+      gtag("config", "UA-89557275-2");
+    </script>
 
+    <script>
+      var noAvatarURL =
+        "{{url_for('reader_blueprint.static',filename='images/noAvatar.png')}}";
+    </script>
 
-              {% raw %}{{ articleLinkTitle }}{% endraw %}
+    <!-- Include the subscription package. -->
 
-              <br/>
-              <i style="display:{% raw %}{{ articleLinkDisplayStar }}{% endraw %}"
-                 class="material-icons star">star</i>
-              <i style="display:{% raw %}{{ articleLinkDisplayLike }}{% endraw %}" class="material-icons star">thumb_up</i>
+    <!--FONT LINK-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
+    <!--CSS for header NEW-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-header.css') }}"
+    />
+    <!--CSS for list NEW-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-list.css') }}"
+    />
 
+    <!--CSS for article-settings NEW-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
+    />
 
-          </a>
+    <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
 
-
-          <div class="starredFlag headerElement">
-              <span class="flag-icon flag-icon-{% raw %}{{ articleLinkLanguage }}{% endraw %} headerElement"></span>
-          </div>
+    <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
+  </head>
+  <div
+    class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
+  >
+    <header class="mdl-layout__header mdl-layout__header--transparent">
+      <div class="mdl-layout__header-row">
+        <a
+          href="/whatnext"
+          id="return_home"
+          class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon"
+        >
+          <i class="material-icons">home_back</i>
+        </a>
+        <div class="mdl-layout-spacer"></div>
+        "
       </div>
-  </li>
-  <div class="articleLinkSpacer"></div>
-</script>
-
-<script id="search-notification-template" type="text/template">
-  <li class="fadeoutOnClick articleLinkEntry search-notification-box">
-      <div class="articleLinkHeader">
-          <div class="searchText headerElement">
-              {% raw %}{{ displayText }}{% endraw %}
+      <div
+        class="mdl-layout__tab-bar mdl-js-ripple-effect"
+        class="select-article"
+      >
+        <p class="welcome_personal">Welcome,</p>
+        <h1 class="select-article">Select an Article</h1>
+        <div class="all__tabs">
+          <div class="row__tab">
+            <a id="inbox_tab" href="#inbox" class="mdl-layout__tab">
+              Articles</a
+            >
           </div>
-          <div class="deleteSearch headerElement">
-              <i class="material-icons">cancel</i>
+          <div class="row__bar">
+            <div class="bar"></div>
           </div>
+          <div class="row__tab">
+            <a id="cohort_tab" href="#cohort" class="mdl-layout__tab">
+              Bookmarks</a
+            >
+          </div>
+          <div class="row__bar">
+            <div class="bar"></div>
+          </div>
+          <div class="row__tab">
+            <a id="starred_tab" href="#starred" class="mdl-layout__tab">
+              Classroom</a
+            >
+          </div>
+        </div>
       </div>
-  </li>
-  <div class="articleLinkSpacer"></div>
-</script>
+    </header>
+    <div class="widthOfColumn">
+      <div class="mdl-layout__drawer mdl-color--amber-A700">
+        <nav class="mdl-navigation">
+          <div class="options">
+            <br /><br /><br />
+
+            <!----  <span class="mdl-layout-title">
+            My Interests
+          </span>
+          <br /> -->
+
+            <!-- List of content currently subscribed to. -->
+            <!--
+          <span
+            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+          >
+            <span class="mdl-chip__text">Languages</span>
+            <button
+              type="button"
+              class="mdl-chip__action show-language-subscriber"
+            >
+              <i class="material-icons mdl-color-text--amber">add_circle</i>
+            </button>
+          </span>
+          <div id="languagesList"></div>
+
+          <div style="font-size: xx-small">&nbsp;</div> -->
+            <div class="interestButton">
+              <span
+                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+              >
+                <button
+                  type="button"
+                  class="mdl-chip__action show-topic-subscriber"
+                >
+                  <span class="mdl-chip__text">Interests</span>
+                  <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+                </button>
+              </span>
+            </div>
+
+            <div id="searchesList"></div>
+            <div id="topicsList">
+              <div id="any_topic" style="display:none;">
+                &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
+                  >Showing all Interests...</i
+                >
+              </div>
+            </div>
+
+            <div style="font-size: xx-small">&nbsp;</div>
+            <div class="interestButton">
+              <span
+                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
+              >
+                <button
+                  type="button"
+                  class="mdl-chip__action show-filter-subscriber"
+                >
+                  <span class="mdl-chip__text"><nobr>Non-Interests</nobr></span>
+                  <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
+                </button>
+              </span>
+            </div>
+            <div id="searchesFilterList"></div>
+            <div id="topicsFilterList"></div>
+
+            <div style="font-size: xx-small">&nbsp;</div>
+
+            <br />
+            <!--- <span class="mdl-layout-title">
+            Search
+          </span>-->
+            <div class="seachField">
+              <div
+                class="mdl-textfield mdl-js-textfield mdl-textfield--expandable"
+              >
+                <label
+                  class="mdl-button mdl-js-button mdl-button--icon"
+                  for="search-expandable"
+                >
+                  <!---   <i class="material-icons">search</i>-->
+                </label>
+                <div class="mdl-textfield__expandable-holder">
+                  <input
+                    class="mdl-textfield__input"
+                    type="text"
+                    id="search-expandable"
+                    placeholder="Search all articles"
+                  />
+                  <!--<label class="mdl-textfield__label" for="search-expandable"
+                >Search...</label
+              >-->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Sorting buttons-->
+          <div class="sortingCategories">
+            <div class="wordsSorting">
+              <div class="levelLable">Words</div>
+              <div class="triangle"></div>
+            </div>
+            <div class="levelSorting">
+              <div class="wordLable">Level</div>
+              <div class="triangle"></div>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+    <div class="widthOfColumn">
+      <div class="tagsOfTopics"></div>
+    </div>
+    <div class="widthOfColumn">
+      <main class="mdl-layout__content">
+        <section class="mdl-layout__tab-panel is-active" id="inbox">
+          <div class="page-content">
+            <!-- Search notification -->
+            <ul id="searchNotification" class="searchNotification"></ul>
+            <!-- List of articles -->
+            <ul id="articleLinkList" class="articleLinkList"></ul>
+            <br />
+            <div id="emptyArticleListImage" class="emptyPage">
+              <img
+                class="sadEleph"
+                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+                alt="Not subscribed to any feeds..."
+              />
+            </div>
+            <div class="loader">
+              <img
+                class="eleph"
+                src="{{ url_for('reader_blueprint.static',filename='images/elephlogo.png') }}"
+                alt="Loading..."
+              />
+            </div>
+          </div>
+        </section>
+        <section class="mdl-layout__tab-panel" id="starred">
+          <div class="page-content">
+            <ul id="starredArticleList" class="articleLinkList"></ul>
+            <div id="emptyStarredArticleListImage" class="emptyPage">
+              <img
+                class="sadEleph"
+                src="{{ url_for('reader_blueprint.static',filename='images/empty.png') }}"
+                alt="Not subscribed to any feeds..."
+              />
+            </div>
+          </div>
+        </section>
+      </main>
+    </div>
+  </div>
+
+  <!-- Template for subscribed source items -->
+  <script id="subscription-template-source" type="text/template">
+       <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
+
+  <!-- Template for subscribed topic items -->
+  <script id="subscription-template-topic" type="text/template">
+       <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
+
+  <!-- Template for subscribed search items -->
+  <script id="subscription-template-search" type="text/template">
+       <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
+
+  <!-- Template for subscribed language items -->
+  <script id="subscription-template-language" type="text/template">
+       <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
+    	<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
+    	<a class="mdl-chip__action removeButton">
+    		<i class="material-icons">cancel</i>
+    	</a>
+    </span>
+  </script>
+
+
+
+    <script id="starred-articleLink-template" type="text/template">
+      <li class="articleLinkEntry" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
+        <a 
+          href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}"> 
+          <div class="articleLinkHeader">
+            {% raw %}{{ articleLinkTitle }}{% endraw %}
+            <div class="articleLinkDifficulty headerElement">
+              <span class="difficulty-level articleLinkDifficultyText"
+                            > {% raw %}{{articleDifficulty}}{% endraw %} </span>
+              <span class="articleLinkDifficultyText"> {% raw %}{{ wordCount }}{% endraw %}</span>
+            </div>       
+          </div>
+          <div class="articleLinkSummary">
+            {% raw %}{{articleSummary}}{% endraw %}
+          </div>
+          <div class="articleTopics">
+            <div class="articleLinkImage">
+              <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
+            </div>
+            <span class="publishingTime">({% raw %}{{articleLinkPublished}}{% endraw %})</span>
+            <span class="singleTopicTag">
+              {% raw %}{{articleTopics}}{% endraw %}</span>
+          </div>
+           <!-- STAR AND THE LIKE BUTTON DISPLAAYED
+                    <i style="display:{% raw %}{{ articleLinkDisplayStar }}{% endraw %}"
+                      class="material-icons star">star</i>
+                    <i style="display:{% raw %}{{ articleLinkDisplayLike }}{% endraw %}" class="material-icons star">thumb_up</i>
+                  -->
+        </a>
+      </li>
+      <div class="articleLinkSpacer"></div>
+  
+    </script>
+
+
+
+
+  <script id="search-notification-template" type="text/template">
+    <li class="fadeoutOnClick articleLinkEntry search-notification-box">
+        <div class="articleLinkHeader">
+            <div class="searchText headerElement">
+                {% raw %}{{ displayText }}{% endraw %}
+            </div>
+            <div class="deleteSearch headerElement">
+                <i class="material-icons">cancel</i>
+            </div>
+        </div>
+    </li>
+    <div class="articleLinkSpacer"></div>
+  </script>
+
+  <!-- Dialog windows for adding a source, topic and filter. -->
+  {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
+</html>
