--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -1,145 +1,163 @@
 <html>
-
-<head>
+  <head>
     <title>Zeeguu Reader</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'UA-89557275-2');
+      gtag("config", "UA-89557275-2");
     </script>
 
+    <!--FONT LINK-->
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat:300,300i,400&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Include the translation package. -->
-    <link rel="stylesheet" type="text/css"
-        href="{{ url_for('reader_blueprint.static',filename='scripts/dist/css/translation-0.9.353.css') }}">
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/dist/css/translation-0.9.353.css') }}"
+    />
     <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
-</head>
+  </head>
 
-<body>
-
-    <div id="loaderanimation" style="left: 0;
+  <body>
+    <div
+      id="loaderanimation"
+      style="left: 0;
      position: absolute;
      text-align: center;
      color: gray;
      top: 50%;
      width: 100%;
      z-index: 9999;
-     animation: fadein 2s 0s 6 linear alternate;">
-
-        Loading article ...
+     animation: fadein 2s 0s 6 linear alternate;"
+    >
+      Loading article ...
     </div>
-
 
     <!-- Top bar -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header mdl-layout__header--transparent">
+      <header class="mdl-layout__header mdl-layout__header--transparent">
+        {% include "question__problems_with_article.html" %}
 
+        <div
+          id="header_row"
+          style="visibility:hidden"
+          class="mdl-layout__header-row"
+        >
+          <a
+            id="back_button"
+            {#
+            href="{{ url_for('reader_blueprint.articles') }}"
+            #}
+            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon reader_toolbar_button"
+          >
+            <i class="material-icons">arrow_back</i>
+          </a>
 
-            {% include "question__problems_with_article.html" %}
+          <div class="mdl-tooltip" data-mdl-for="back_button">
+            Back To Article List
+          </div>
 
+          <a
+            id="read_later_link"
+            href="{{ url_for('reader_blueprint.articles') }}"
+          >
+            <i id="read_later" class="material-icons reader_toolbar_button"
+              >watch_later</i
+            >
+          </a>
 
-            <div id="header_row" style="visibility:hidden" class="mdl-layout__header-row">
+          <div class="mdl-tooltip" data-mdl-for="read_later_link">
+            Read Later...
+          </div>
 
-                <a id="back_button" {#            href="{{ url_for('reader_blueprint.articles') }}"    #}
-                    class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon reader_toolbar_button">
-                    <i class="material-icons">arrow_back</i>
-                </a>
+          <div class="mdl-layout-spacer"></div>
+          <button
+            id="toggle_undo"
+            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon "
+          >
+            <i class="material-icons">undo</i>
+          </button>
 
-                <div class="mdl-tooltip" data-mdl-for="back_button">
-                    Back To Article List
-                </div>
+          <button
+            id="toggle_copy"
+            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon mdl-button--disabled "
+          >
+            <i class="material-icons">content_copy</i>
+          </button>
 
-
-                <a id="read_later_link" href="{{ url_for('reader_blueprint.articles') }}">
-                    <i id="read_later" class="material-icons reader_toolbar_button">watch_later</i>
-                </a>
-
-                <div class="mdl-tooltip" data-mdl-for="read_later_link">
-                    Read Later...
-                </div>
-
-
-                <div class="mdl-layout-spacer"></div>
-                <button id="toggle_undo" class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon ">
-                    <i class="material-icons">undo</i>
-                </button>
-
-
-                <button id="toggle_copy"
-                    class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon mdl-button--disabled ">
-                    <i class="material-icons">content_copy</i>
-                </button>
-
-
-                <button id="toggle_star" class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon ">
-                    <i id="star_border" class="material-icons star">star_border</i>
-                    <i id="star_fill" class="material-icons star off">star</i>
-                </button>
-
-
-            </div>
-        </header>
-
-        <span id="articleID" style="display: none">{{ article_id }}</span>
-
-        <!-- Article content. -->
-        <main class="mdl-layout__content">
-
-            <div id="main_article_content" style="visibility:hidden" class="page-content-container">
-                <div class="content-container">
-                    <div class="page-content">
-                        <p class="title translatable">
-                            <span id="articleTitle"></span>
-                        </p>
-                        <p id="articleInfo">
-
-                            <span id="articleURL"></span>
-                            <a href="" id="source">source</a>
-                            <span id="authors"></span>
-                        </p>
-                        <div id="articleContent" class="translatable"></div>
-                        <br />
-                    </div>
-                </div>
-                <div id="like_button">
-                    <button id="toggle_like" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect">
-                        <i class="material-icons">thumb_up</i>
-                    </button>
-                </div>
-
-            </div>
-
-
-            <div id="bottom_feedback_div" style="visibility:hidden">
-
-                <div class="questionnaire-content">
-
-                    {% include 'question__article_difficulty.html' %}
-
-                </div>
-            </div>
-
-
-        </main>
-        <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
-            <div class="mdl-snackbar__text"></div>
-            <button class="mdl-snackbar__action" type="button"></button>
+          <button
+            id="toggle_star"
+            class="mdl-button mdl-js-button mdl-button--icon mdl-layout-icon "
+          >
+            <i id="star_border" class="material-icons star">star_border</i>
+            <i id="star_fill" class="material-icons star off">star</i>
+          </button>
         </div>
-    </div>
+      </header>
 
+      <span id="articleID" style="display: none">{{ article_id }}</span>
+
+      <!-- Article content. -->
+      <main class="layout__content">
+        <div
+          id="main_article_content"
+          style="visibility:hidden"
+          class="page-content-container"
+        >
+          <div class="content-container">
+            <div class="page-content">
+              <p class="title translatable">
+                <span id="articleTitle"></span>
+              </p>
+              <p id="articleInfo">
+                <span id="articleURL"></span>
+                <a href="" id="source">source<br /></a>
+                <span id="authors"></span>
+              </p>
+              <div id="articleContent" class="translatable"></div>
+              <br />
+            </div>
+          </div>
+          <div id="like_button">
+            <button
+              id="toggle_like"
+              class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect"
+            >
+              <i class="material-icons">thumb_up</i>
+            </button>
+          </div>
+        </div>
+
+        <div id="bottom_feedback_div" style="visibility:hidden">
+          <div class="questionnaire-content">
+            {% include 'question__article_difficulty.html' %}
+          </div>
+        </div>
+      </main>
+      <div id="toastmessage" class="mdl-js-snackbar mdl-snackbar">
+        <div class="mdl-snackbar__text"></div>
+        <button class="mdl-snackbar__action" type="button"></button>
+      </div>
+    </div>
 
     <!-- Menu to change the translation -->
     <div id="alterMenuContainer">
-        <div id="alterMenu"></div>
+      <div id="alterMenu"></div>
     </div>
-
-
-</body>
-
+  </body>
 </html>
