--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -80,7 +80,7 @@
         <h1 class="select-article">Select an Article</h1>
         <div class="all__tabs">
           <div class="row__tab">
-            <a id="inbox_tab" href="#inbox" class="mdl-layout__tab">
+            <a id="inbox_tab" href="/read" class="mdl-layout__tab">
               Articles</a
             >
           </div>
@@ -88,7 +88,7 @@
             <div class="bar"></div>
           </div>
           <div class="row__tab">
-            <a id="cohort_tab" href="#cohort" class="mdl-layout__tab">
+            <a id="starred_tab" href="/read/bookmarks" class="mdl-layout__tab">
               Bookmarks</a
             >
           </div>
@@ -96,7 +96,7 @@
             <div class="bar"></div>
           </div>
           <div class="row__tab">
-            <a id="starred_tab" href="#starred" class="mdl-layout__tab">
+            <a id="cohort_tab" href="/read/classroom" class="mdl-layout__tab">
               Classroom</a
             >
           </div>
