--- a/src/umr/templates/article.html
+++ b/src/umr/templates/article.html
@@ -124,6 +124,7 @@
               <p class="title translatable">
                 <span id="articleTitle"></span>
               </p>
+              <hr class="seperator" />
               <p id="articleInfo">
                 <span id="articleURL"></span>
                 <a href="" id="source">source<br /></a>
