--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -1,62 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <!--This is a test-push for the Kristin Reader-->
 
-  <head>
-    <title>Zeeguu - Classroom</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=UA-89557275-2"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "UA-89557275-2");
-    </script>
-
-    <script>
-      var noAvatarURL =
-        "{{url_for('reader_blueprint.static',filename='images/noAvatar.png')}}";
-    </script>
-
-    <!-- Include the subscription package. -->
-
-    <!--FONT LINK-->
-    <link
-      href="https://fonts.googleapis.com/css?family=Montserrat&display=swap"
-      rel="stylesheet"
-    />
-    <!--CSS for header NEW-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-header.css') }}"
-    />
-    <!--CSS for list NEW-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-list.css') }}"
-    />
-
-    <!--CSS for article-settings NEW-->
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/article-settings.css') }}"
-    />
-
-    <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/subscription-0.9.353.js') }}"></script>
-
-    <script src="{{ url_for('reader_blueprint.static',filename='scripts/dist/translation-0.9.353.js') }}"></script>
-  </head>
+  {% extends 'articleHeader.html' %}
+  {% block header %}
   <div
     class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
   >
@@ -343,7 +287,7 @@
     </li>
     <div class="articleLinkSpacer"></div>
   </script>
-
+  {% endblock %}
   <!-- Dialog windows for adding a source, topic and filter. -->
   {% include 'addSourceDialog.html' %} {% include 'addTopicDialog.html' %}
 </html>
