Interests subscribe/unsubscribe works

--- a/src/umr/static/scripts/newStyling/article-settings.css
+++ b/src/umr/static/scripts/newStyling/article-settings.css
@@ -56,13 +56,14 @@ button {
   margin-top: 20px;
 }
 
-.tagsOfTopics {
+.tagsOfInterests {
   background: #fff4e2;
   border-radius: 3px;
   display: none;
   width: 100%;
   padding: 50px 0;
   text-align: center;
+  padding-bottom: 2%;
 }
 
 .mdl-dialog__content {
@@ -137,11 +138,47 @@ button {
 .mdl-chip__action.interests {
   margin-bottom: 4px;
   margin-top: 4px;
+  background-color:  #ffbb54;
+  color: white;
 }
 
-.mdl-chip__action.interests.clicked {
+.mdl-chip__action.interests.unsubscribed {
   background-color: white;
   color: #ffbb54;
+}
+
+.addInterestButton {
+  box-shadow: none;
+  all: unset;
+  border:1px solid #ffbb54;
+  border-radius: 17px;
+  padding: 5px 27px;
+  background-color: #ffffff; 
+  color: #ffbb54;
+  font-size: 16px;
+  font-family: Montserrat;
+  font-weight: 400;
+  text-align: center;
+  min-width: 50px;
+  margin-top: 10px;
+  margin-left: 84%;
+}
+
+.closeTagsOfInterests {
+  box-shadow: none;
+    all: unset;
+    border: 1px solid #ffbb54;
+    border-radius: 10px;
+    /* padding: 0px 0px; */
+    background-color: #ffffff;
+    color: #ffbb54;
+    font-size: 15px;
+    font-family: Montserrat;
+    font-weight: 400;
+    text-align: center;
+    min-width: 18px;
+    margin-top: 7px;
+    margin-left: 96%;
 }
 
 /*** SWEEET ALERT ******/
@@ -167,7 +204,7 @@ body.stop-scrolling {
 
 .sweet-alert {
   background-color: white;
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: Montserrat;
   width: 478px;
   padding: 17px;
   border-radius: 5px;
@@ -194,9 +231,11 @@ body.stop-scrolling {
   color: #575757;
   font-size: 30px;
   text-align: center;
+  font-family: Montserrat;
   font-weight: 600;
   text-transform: none;
   position: relative;
+
   margin: 25px 0;
   padding: 0;
   line-height: 40px;
@@ -367,10 +406,10 @@ body.stop-scrolling {
     inset 0 0 0 1px rgba(0, 0, 0, 0.05);
 }
 .sweet-alert button:hover {
-  background-color: #7ecff4;
+  background-color: #ffbb52;;
 }
 .sweet-alert button:active {
-  background-color: #5dc2f1;
+  background-color: #ffbb54;;
 }
 .sweet-alert button.cancel {
   background-color: #c1c1c1;
