--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -40,19 +40,18 @@
   </div>
 </script>
 
-<!-- Template for feed items -->
+<!-- Template for feed items MODIFIED -->
 <script id="topicAddable-template" type="text/template">
   <div addableID="{% raw %}{{ id }}{% endraw %}" class="mdl-list__item">
     <span class="mdl-list__item-primary-content">
       <!-- <img src="{% raw %}{{ image_url }}{% endraw %}" class="feedIcon mdl-list__item-avatar"/> -->
-        <button 
+      <a class="mdl-list__item-secondary-action topic">
+      <button 
           type="button"
           class="mdl-chip__action interests"
           >
         <span class="addableTitle">{% raw %}{{ title }}{% endraw %}</span>
         </button>
-    <a class="mdl-list__item-secondary-action subscribeButton">
-      <i class="material-icons ">add_circle</i>
     </a>
   </div>
 </script>
