navigation-menu started, not fully responsive

--- a/src/umr/templates/articleHeader.html
+++ b/src/umr/templates/articleHeader.html
@@ -43,6 +43,13 @@
       type="text/css"
       href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/reader-header.css') }}"
     />
+
+    <!--CSS for side-bar NEW-->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('reader_blueprint.static',filename='scripts/newStyling/side-bar.css') }}"
+    />
     <!--CSS for list NEW-->
     <link
       rel="stylesheet"
