--- a/src/umr/static/scripts/newStyling/side-bar.css
+++ b/src/umr/static/scripts/newStyling/side-bar.css
@@ -42,6 +42,20 @@
   width:100%;
 }
 
+.settingsbtn{
+  width: 48.68px;
+  height: 48px;
+  border-radius: 50%;
+  background: #FFBB54;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.settingsImg{
+  width: 100%;
+}
+
 .nav-generalbtn{
   position: relative;
   width: 130px;
@@ -66,16 +80,23 @@
 
 }
 
-.dropbtn span:after{
-  content:'˅' ;
-}
+
+
 
 .dropdown {
   position: relative;
   display: block;
   bottom: 25%;
-  top: 25%;
-  
+  top: 20%;
+}
+
+.dropbtn span{
+  position: absolute;
+  right:50px;
+}
+
+.dropbtn span:after{
+  content:'˅' ;
 }
 
 .dropdown-content {
@@ -97,10 +118,7 @@
 .dropdown-content  a:hover {
   background-color: #ffffff;
   color: #FFBB54;
-
 }
-
-
 
 .dropdown:hover .dropdown-content {display: block;}
 
