--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -40,109 +40,15 @@
     <div class="widthOfColumn">
       <div class="mdl-layout__drawer mdl-color--amber-A700">
         <nav class="mdl-navigation">
-          <div class="options">
-            <br /><br /><br />
-
-            <!----  <span class="mdl-layout-title">
-            My Interests
-          </span>
-          <br /> -->
-
-            <!-- List of content currently subscribed to. -->
-            <!--
-          <span
-            class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-          >
-            <span class="mdl-chip__text">Languages</span>
-            <button
-              type="button"
-              class="mdl-chip__action show-language-subscriber"
-            >
-              <i class="material-icons mdl-color-text--amber">add_circle</i>
-            </button>
-          </span>
-          <div id="languagesList"></div>
-
-          <div style="font-size: xx-small">&nbsp;</div> -->
-            <div class="interestButton">
-              <span
-                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-              >
-                <button
-                  type="button"
-                  class="mdl-chip__action show-topic-subscriber"
-                >
-                  <span class="mdl-chip__text">Interests</span>
-                  <!--  <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-
-            <div id="searchesList"></div>
-            <div id="topicsList">
-              <div id="any_topic" style="display:none;">
-                &nbsp;&nbsp;&nbsp;&nbsp;<i style="color:gray"
-                  >Showing all Interests...</i
-                >
-              </div>
-            </div>
-
-            <div style="font-size: xx-small">&nbsp;</div>
-            <div class="interestButton">
-              <span
-                class="mdl-chip mdl-chip--deletable mdl-color--white mdl-color-text--amber tour"
-              >
-                <button
-                  type="button"
-                  class="mdl-chip__action show-filter-subscriber"
-                >
-                  <span class="mdl-chip__text"><nobr>Non-Interests</nobr></span>
-                  <!-- <i class="material-icons mdl-color-text--amber">add_circle</i>-->
-                </button>
-              </span>
-            </div>
-            <div id="searchesFilterList"></div>
-            <div id="topicsFilterList"></div>
-
-            <div style="font-size: xx-small">&nbsp;</div>
-
-            <br />
-            <!--- <span class="mdl-layout-title">
-            Search
-          </span>-->
-            <div class="seachField">
-              <div
-                class="mdl-textfield mdl-js-textfield mdl-textfield--expandable"
-              >
-                <label
-                  class="mdl-button mdl-js-button mdl-button--icon"
-                  for="search-expandable"
-                >
-                  <!---   <i class="material-icons">search</i>-->
-                </label>
-                <div class="mdl-textfield__expandable-holder">
-                  <input
-                    class="mdl-textfield__input"
-                    type="text"
-                    id="search-expandable"
-                    placeholder="Search all articles"
-                  />
-                  <!--<label class="mdl-textfield__label" for="search-expandable"
-                >Search...</label
-              >-->
-                </div>
-              </div>
-            </div>
-          </div>
           <!-- Sorting buttons-->
           <div class="sortingCategories">
             <div class="wordsSorting">
-              <div class="levelLable">Words</div>
-              <div class="triangle"></div>
+              <div class="wordLabel">words</div>
+              <div id="triangleWords" class="triangle"></div>
             </div>
             <div class="levelSorting">
-              <div class="wordLable">Level</div>
-              <div class="triangle"></div>
+              <div class="levelLabel">level</div>
+              <div id="triangleLevel" class="triangle"></div>
             </div>
           </div>
         </nav>
@@ -192,46 +98,6 @@
     </div>
   </div>
 
-  <!-- Template for subscribed source items -->
-  <script id="subscription-template-source" type="text/template">
-       <span sourceRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed topic items -->
-  <script id="subscription-template-topic" type="text/template">
-       <span topicRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ title }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed search items -->
-  <script id="subscription-template-search" type="text/template">
-       <span searchRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ search }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
-  <!-- Template for subscribed language items -->
-  <script id="subscription-template-language" type="text/template">
-       <span languageRemovableID="{% raw %}{{ id }}{% endraw %}" class="mdl-chip mdl-chip--deletable list_item">
-    	<span class="mdl-chip__text">{% raw %}{{ language }}{% endraw %}</span>
-    	<a class="mdl-chip__action removeButton">
-    		<i class="material-icons">cancel</i>
-    	</a>
-    </span>
-  </script>
-
 
 
     <script id="starred-articleLink-template" type="text/template">
@@ -253,7 +119,6 @@
             <div class="articleLinkImage">
               <img src="{% raw %}{{articleIcon}}{% endraw %}" class="feedIcon mdl-list__item-avatar"/>
             </div>
-            <span class="publishingTime">({% raw %}{{articleLinkPublished}}{% endraw %})</span>
             <span class="singleTopicTag">
               {% raw %}{{articleTopics}}{% endraw %}</span>
           </div>
