added bookmark for sorting in Main.js filter works

--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -101,7 +101,7 @@
 
 
     <script id="starred-articleLink-template" type="text/template">
-      <li class="articleLinkEntry" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
+      <li class="{% raw %}{{ wordCount }}{% endraw %} {% raw %}{{articleDifficulty}}{% endraw %} fadeoutOnClick articleLinkEntry  {% raw %}{{alreadyOpenedClass}}{% endraw %}" articleLinkFeedID="{% raw %}{{articleLinkFeedID}}{% endraw %}">
         <a 
           href="{{ url_for('reader_blueprint.get_article') }}?articleID={% raw %}{{ articleLinkID }}{% endraw %}"> 
           <div class="articleLinkHeader">
