--- a/src/umr/templates/addTopicDialog.html
+++ b/src/umr/templates/addTopicDialog.html
@@ -48,7 +48,7 @@
       <a class="mdl-list__item-secondary-action topic">
       <button 
           type="button"
-          class="mdl-chip__action interests"
+          class="interests"
           >
         <span class="addableTitle">{% raw %}{{ title }}{% endraw %}</span>
         </button>
