--- a/src/umr/templates/articles.html
+++ b/src/umr/templates/articles.html
@@ -259,7 +259,7 @@
       <a class="mdl-list__item-secondary-action topic">
         <button
         type="button"
-        class="mdl-chip__action interests custom"
+        class="interests custom"
         >
         <span class="addableTitle">{% raw %}{{ search }}{% endraw %}</span>
         </button>
