--- a/src/umr/templates/bookmarks.html
+++ b/src/umr/templates/bookmarks.html
@@ -2,7 +2,7 @@
   {% extends 'articleHeader.html' %}
   {% block header %}
   <div
-    class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
+    class="main-container"
   >
     <header class="mdl-layout__header mdl-layout__header--transparent">
 
