--- a/src/umr/static/scripts/newStyling/reader-header.css
+++ b/src/umr/static/scripts/newStyling/reader-header.css
@@ -1,10 +1,16 @@
+.main-container{
+  margin-left: 200px;
+  padding: 1px 16px;
+  height: 1000px;
+}
+
 .select-article,
 h1 {
   font-family: Montserrat;
   font-weight: 100;
-  font-size: 40px;
-  line-height: 49px;
-  letter-spacing: 2px;
+  font-size: 2.5rem;
+  line-height: 2.5rem;
+  letter-spacing: 0.13rem;
   display: flex;
   align-items: center;
   text-align: center;
@@ -18,14 +24,14 @@ p {
   font-family: Montserrat;
   font-style: normal;
   font-weight: normal;
-  font-size: 16px;
-  line-height: 24px;
+  font-size: 1rem;
+  line-height: 1.5rem;
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: space-around;
   margin: auto;
-  margin-top: 50px;
+  margin-top: 3.125rem;
 }
 
 .all__tabs {
@@ -42,8 +48,8 @@ p {
 
 .mdl-layout__tab {
   font-family: Montserrat;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 1rem;
+  line-height: 1.25rem;
 }
 
 .row__bar {
