--- a/src/umr/templates/classroom.html
+++ b/src/umr/templates/classroom.html
@@ -3,7 +3,7 @@
   {% block header %}
 
   <div
-    class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-tabs"
+    class="main-container"
   >
     <header class="mdl-layout__header mdl-layout__header--transparent">
 
